--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -96,6 +96,25 @@
   }
 }
 
+/* wallet */
+/* [id^='radix-'] > div > div:nth-of-type(2) {
+  display: none !important;
+}
+
+[id^='radix-']
+  > div
+  > div.flex.mt-6.gap-6.flex-col
+  > div.flex.gap-2.justify-center.items-center.flex-row {
+  display: none !important;
+}
+
+[id^='radix-'].flex.flex-col.fixed.overflow-hidden.bg-background-primary.focus:outline-hidden.scrollbar-none.bottom-0.md:bottom-auto.rounded-t-2xl.rounded-b-none.md:rounded-b-2xl.w-screen.md:w-[540px].min-h-[100px].max-h-[calc(100dvh-80px)].md:max-h-[min(800px,calc(100dvh-80px))] > div > div.flex.mt-6.gap-6.flex-col {
+  display: none !important;
+}
+div:has([id^='radix-']) > div > div:nth-of-type(2) {
+  display: none !important;
+} */
+
 /* video */
 media-controller,
 media-controller * {
